--- a/index.html
+++ b/index.html
@@ -19,19 +19,30 @@
 
 <body>
     <header class="header">
-        <div class="container-fluid py-3">
-            <ul class="list-inline text-right mb-0">
-                <li class="list-inline-item">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/img/icons/facebook-white.svg" alt="" class="img-fluid">
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
-                        <img src="./assets/img/icons/line-white.svg" alt="" class="img-fluid">
-                    </a>
-                </li>
-            </ul>
+        <div class="header-top">
+            <div class="container-fluid py-2">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <a href="javascript:void(0);" class="btn btn-link px-0 d-lg-none" data-toggle="offcanvas">
+                            <img src="./assets/img/icons/menu.svg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-auto">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item">
+                                <a href="http://" target="_blank" rel="noopener noreferrer">
+                                    <img src="./assets/img/icons/facebook-white.svg" alt="" class="img-fluid">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="http://" target="_blank" rel="noopener noreferrer">
+                                    <img src="./assets/img/icons/line-white.svg" alt="" class="img-fluid">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="container text-center">
             <a href="index.html">
@@ -40,34 +51,34 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="offcanvas">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+
 
                 <div class="navbar-collapse offcanvas-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">หน้าหลัก</a>
+                            <a class="nav-link" href="#"><span>หน้าหลัก</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">หน้าแรก</a>
+                            <a class="nav-link" href="#"><span>หน้าแรก</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">รถทั้งหมด</a>
+                            <a class="nav-link" href="#"><span>รถทั้งหมด</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">บริการของเรา</a>
+                            <a class="nav-link" href="#"><span>บริการของเรา</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ลูกค้าของเรา</a>
+                            <a class="nav-link" href="#"><span>ลูกค้าของเรา</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ติดต่อเรา</a>
+                            <a class="nav-link" href="#"><span>ติดต่อเรา</span></a>
                         </li>
                     </ul>
-                    <button class="navbar-toggler" type="button" data-toggle="offcanvas">
-                        <i class="fas fa-times"></i>
-                    </button>
+                    <div class="text-center d-lg-none">
+                        <a href="javascript:void(0);" class="btn btn-link" data-toggle="offcanvas">
+                            <img src="./assets/img/icons/close.svg" alt="" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -79,17 +90,20 @@
                     <div class="banner-content">
                         <div class="banner-content-item">
                             <a href="#" class="card card-banner">
-                                <img src="./assets/img/banners/banner-1.png" alt="" class="card-img">
+                                <img src="./assets/img/banners/banner-sm-1.png" alt="" class="card-img d-lg-none">
+                                <img src="./assets/img/banners/banner-1.png" alt="" class="card-img d-none d-lg-block">
                             </a>
                         </div>
                         <div class="banner-content-item">
                             <a href="#" class="card card-banner">
-                                <img src="./assets/img/banners/banner-1.png" alt="" class="card-img">
+                                <img src="./assets/img/banners/banner-sm-1.png" alt="" class="card-img d-lg-none">
+                                <img src="./assets/img/banners/banner-1.png" alt="" class="card-img d-none d-lg-block">
                             </a>
                         </div>
                         <div class="banner-content-item">
                             <a href="#" class="card card-banner">
-                                <img src="./assets/img/banners/banner-1.png" alt="" class="card-img">
+                                <img src="./assets/img/banners/banner-sm-1.png" alt="" class="card-img d-lg-none">
+                                <img src="./assets/img/banners/banner-1.png" alt="" class="card-img d-none d-lg-block">
                             </a>
                         </div>
                     </div>
@@ -425,7 +439,7 @@
                                 1679 ถนนกาญจนาภิเษก แขวงบางไผ่ เขตบางแค กรุงเทพฯ 10160
                             </p>
                             <p>
-                                <a href="tel:+66983126555">098-312-6555</a>
+                                <a href="tel:+66983126555" class="tel">098-312-6555</a>
                             </p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
