--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="container text-center">
             <a href="index.html">
-                <img src="./assets/img/logo.svg" alt="" class="img-fluid">
+                <img src="./assets/img/logo.svg" alt="" class="img-fluid img-logo">
             </a>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
@@ -163,106 +163,124 @@
                 <div class="container">
                     <h3 class="text-primary text-center">โชว์รูม TPM MOTORS IMPORT จำหน่ายรถยนต์นำเข้า รถอิมพอร์ท IMPORT
                         CAR</h3>
-                    <h6 class="text-center">
+                    <h6 class="text-center mb-4">
                         โชว์รูม TPM MOTOR IMPORT, จำหน่ายรถยนต์นำเข้า, รถอิมพอร์ท, IMPORTCAR, รถทุกรุ่น, รถทุกยี่ห้อ,
                         <span class="d-lg-block">รถทุกประเภท, รับสั่งจองรถ, ถนนกาญจนาภิเษก, บางแค, เพชรเกษม,
                             บรมราชชนนี</span>
                     </h6>
-                    <div class="brand-content">
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/audi.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/bmw.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/chevrolet.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/jaguar.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/lamborghini.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/land_rover.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/mercedes-benz.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/mini.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/porsche.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="brand-content-item">
-                            <a href="#">
-                                <img src="./assets/img/brands/toyota.svg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="recommend">
-                <div class="container">
-                    <div class="text-title">
-                        รถแนะนำ
-                        <span>TPM MOTORS CHANNEL</span>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="recommend-item">
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe class="embed-responsive-item"
-                                        src="https://www.youtube.com/embed/TI09vnrLbyg" allowfullscreen></iframe>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="recommend-item">
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe class="embed-responsive-item"
-                                        src="https://www.youtube.com/embed/Epvkjyt6wH8" allowfullscreen></iframe>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="recommend-item">
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe class="embed-responsive-item"
-                                        src="https://www.youtube.com/embed/GxpQwztDcuw" allowfullscreen></iframe>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="text-center">
-                        <a href="#" class="btn btn-primary">ดูทั้งหมด</a>
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <iframe
+                                    src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2FTPMMOTORS%2F&layout=button_count&size=small&width=108&height=20&appId"
+                                    width="108" height="20" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                            </li>
+                            <li class="list-inline-item">
+                                <div class="line-it-button" data-lang="th" data-type="share-a" data-ver="3"
+                                    data-url="https://social-plugins.line.me/th/how_to_install" data-color="default"
+                                    data-size="small" data-count="false" style="display: none;"></div>
+                                <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
+                                    async="async" defer="defer"></script>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-            </section>
+                <div class="brand-content">
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/audi.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/bmw.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/chevrolet.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/jaguar.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/lamborghini.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/land_rover.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/mercedes-benz.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/mini.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/porsche.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="brand-content-item">
+                        <a href="#">
+                            <img src="./assets/img/brands/toyota.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+        </div>
+        </section>
+        <section class="recommend">
+            <div class="container">
+                <div class="text-title">
+                    รถแนะนำ
+                    <span>TPM MOTORS CHANNEL</span>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="recommend-item">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TI09vnrLbyg"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="recommend-item">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Epvkjyt6wH8"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="recommend-item">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GxpQwztDcuw"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <a href="#" class="btn btn-primary">ดูทั้งหมด</a>
+                </div>
+            </div>
+        </section>
         </div>
         <section class="newcar">
             <div class="bg" style="background-image: url('./assets/img/bg-newcar.png');"></div>
-            <div class="container">
+            <div class="container position-relative">
                 <div class="text-title">
                     รถเข้าใหม่
                     <span>New Car</span>
