--- a/allcar.html
+++ b/allcar.html
@@ -63,13 +63,13 @@
                             <a class="nav-link" href="allcar.html"><span>รถทั้งหมด</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>บริการของเรา</span></a>
+                            <a class="nav-link" href="service.html"><span>บริการของเรา</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>ลูกค้าของเรา</span></a>
+                            <a class="nav-link" href="suggestion.html"><span>ลูกค้าของเรา</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>ติดต่อเรา</span></a>
+                            <a class="nav-link" href="contact.html"><span>ติดต่อเรา</span></a>
                         </li>
                     </ul>
                     <div class="text-center d-lg-none">
