--- a/car-detail.html
+++ b/car-detail.html
@@ -81,7 +81,7 @@
             </div>
         </nav>
     </header>
-    <main class="main" style="background-image: url('./assets/img/bg-main.jpg');">
+    <main class="main">
         <section class="cardetail">
             <div class="container">
                 <div class="row align-items-end mt-4 mb-3">
