--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
             </div>
         </nav>
     </header>
-    <main class="main" style="background-image: url('./assets/img/bg-main-content-2.png');">
+    <main class="main">
         <div class="container">
             <div class="text-title">
                 ติดต่อเรา
