--- a/allcar.html
+++ b/allcar.html
@@ -82,7 +82,7 @@
         </nav>
     </header>
     <main class="main">
-        <div class="main-bg"></div>
+        <div class="bg-main"></div>
         <section class="banner">
             <div class="container">
                 <div class="banner-content">
