--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
         </nav>
     </header>
     <main class="main">
+        <div class="bg-main"></div>
         <div class="container">
             <div class="text-title">
                 ติดต่อเรา
