--- a/car-detail.html
+++ b/car-detail.html
@@ -82,6 +82,7 @@
         </nav>
     </header>
     <main class="main">
+        <div class="bg-main"></div>
         <section class="cardetail">
             <div class="container">
                 <div class="row align-items-end mt-4 mb-3">
