--- a/suggestion.html
+++ b/suggestion.html
@@ -214,7 +214,7 @@
             </div>
         </section>
         <section class="suggestion">
-            <div class="container">
+            <div class="container pb-4">
                 <div class="text-title">
                     รถแนะนำ
                     <span>TPM MOTORS CHANNEL</span>
@@ -323,10 +323,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-center d-lg-none mt-4">
-                    <a href="#" class="btn btn-primary">ดูทั้งหมด</a>
-                </div>
-                <nav class="d-none d-lg-block mt-4">
+                <nav class="mt-4">
                     <ul class="pagination justify-content-center">
                         <li class="page-item page-item-prev">
                             <a class="page-link" href="#" aria-label="Previous">
@@ -356,91 +353,6 @@
                         </li>
                     </ul>
                 </nav>
-            </div>
-        </section>
-        <section class="newcar pb-0 d-lg-none">
-            <div class="container">
-                <div class="text-title">
-                    รถเข้าใหม่
-                    <span>New Car</span>
-                </div>
-                <div class="newcar-content">
-                    <div class="newcar-content-item">
-                        <a href="#" class="card card-newcar">
-                            <div class="card-img">
-                                <div class="card-img-frame">
-                                    <img src="./assets/img/car-01.png" alt="">
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <h6 class="card-title">MERCEDES-BENZ</h6>
-                                <ul class="card-list">
-                                    <li>E-CLASS</li>
-                                    <li>W 207 (ปี13-15)</li>
-                                </ul>
-                                <div class="card-price">1,899,000 ฿</div>
-                                <div class="card-year">2014</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="newcar-content-item">
-                        <a href="#" class="card card-newcar">
-                            <div class="card-img">
-                                <div class="card-img-frame">
-                                    <img src="./assets/img/car-01.png" alt="">
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <h6 class="card-title">MERCEDES-BENZ</h6>
-                                <ul class="card-list">
-                                    <li>E-CLASS</li>
-                                    <li>W 207 (ปี13-15)</li>
-                                </ul>
-                                <div class="card-price">1,899,000 ฿</div>
-                                <div class="card-year">2014</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="newcar-content-item">
-                        <a href="#" class="card card-newcar">
-                            <div class="card-img">
-                                <div class="card-img-frame">
-                                    <img src="./assets/img/car-01.png" alt="">
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <h6 class="card-title">MERCEDES-BENZ</h6>
-                                <ul class="card-list">
-                                    <li>E-CLASS</li>
-                                    <li>W 207 (ปี13-15)</li>
-                                </ul>
-                                <div class="card-price">1,899,000 ฿</div>
-                                <div class="card-year">2014</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="newcar-content-item">
-                        <a href="#" class="card card-newcar">
-                            <div class="card-img">
-                                <div class="card-img-frame">
-                                    <img src="./assets/img/car-01.png" alt="">
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <h6 class="card-title">MERCEDES-BENZ</h6>
-                                <ul class="card-list">
-                                    <li>E-CLASS</li>
-                                    <li>W 207 (ปี13-15)</li>
-                                </ul>
-                                <div class="card-price">1,899,000 ฿</div>
-                                <div class="card-year">2014</div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <a href="#" class="btn btn-primary">ดูทั้งหมด</a>
-                </div>
             </div>
         </section>
     </main>
