--- a/allcar.html
+++ b/allcar.html
@@ -211,7 +211,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row text-center text-lg-left">
                     <div class="col-lg-auto">
                         <img src="./assets/img/logo.svg" alt="" class="img-fluid">
                     </div>
