--- a/suggestion.html
+++ b/suggestion.html
@@ -218,12 +218,12 @@
                 <div class="text-title">
                     รถแนะนำ
                     <span>TPM MOTORS CHANNEL</span>
-                    <p class="d-none d-lg-block">
+                    <p>
                         โชว์รูม TPM MOTOR IMPORT, จำหน่ายรถยนต์นำเข้า, รถอิมพอร์ท, IMPORTCAR, รถทุกรุ่น,
                         รถทุกยี่ห้อ, รถทุกประเภท, <br> รับสั่งจองรถ, ถนนกาญจนาภิเษก, บางแค, เพชรเกษม, บรมราชชนนี
                     </p>
                 </div>
-                <div class="text-right">
+                <div class="text-center">
                     <ul class="list-inline">
                         <li class="list-inline-item">
                             <iframe
