--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body id="intro">
     <section class="top">
         <img src="./motorsimport/assets/img/intro-bg-tpm.jpg" alt="" class="bg">
-        <div class="container-fluid">
+        <div class="container">
             <h2>TPM MOTORS CHANNEL</h2>
             <div class="row">
                 <div class="col-lg-auto ml-lg-auto text-center text-white">
@@ -91,7 +91,7 @@
     </section>
     <section class="bottom">
         <img src="./motorsimport/assets/img/intro-bg-triplem.jpg" alt="" class="bg">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-auto text-center text-white">
                     <p class="mb-lg-4">
